<resources>
    <string name="app_name">MWT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="drinking_statistics">Drinking Statistics</string>
    <string name="drinking_timer">Drinking Timer</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="app_title">MyWaterTracker\nMTW</string>
    <string name="division">/</string>
    <string name="image_description_water_container">This is the image that should represent a water container</string>
    <string name="water_bottle">Water Bottle</string>
    <string name="button_description">allows user to add a water container</string>
    <string name="add_water_container">Add water container</string>
    <string name="new_container_name">Container name:</string>
    <string name="enter_name">enter name</string>
    <string name="new_container_size">Container size:</string>
    <string name="enter_size">enter size</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="snackbar_success">Container has been added.</string>
    <string name="snackbar_fail">Must fill in all attributes</string>
    <string name="denominator_test">2000</string>
    <string name="numerator_test">800</string>
    <string name="water_containers">Water Containers</string>
    <string name="percentage_test">80%</string>
    <string name="week_tracker">Week</string>
    <string name="month_tracker">Month</string>
    <string name="add_container">Add\nContainer</string>
    <string name="select_option">Select Option</string>
    <string name="cancel_container_option">Cancel Container Option</string>
    <string name="show_edit">Show Edit Oprion</string>
    <string name="option_delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="edit_container">Edit Container</string>
    <string name="new_name">Edit name:</string>
    <string name="new_size">Edit size:</string>
    <string name="today_date_test">09/12/1997</string>
    <string name="chart_entries">Chart Entries</string>
    <string name="image_of_the_water_bother_that_was_used_to_drink">Image of the water bother that was used to drink</string>
    <string name="test_date_drank">10/12/2019</string>
    <string name="test_water_drank">Water drank: 400</string>
    <string name="water_container_max_test">Water Container max: 500</string>
    <string name="water_drank">Water drank: </string>
    <string name="water_drank_container_max">Water Container max: </string>
    <string name="drinking_history">Drinking History</string>
    <string name="settings">Settings</string>
    <string name="ibm">IBM</string>
    <string name="goals">Goals</string>
    <string name="edit_water_container">Edit Water Container</string>
    <string name="this_indicates_if_the_tab_is_pulled_up_or_not">this indicates if the tab is pulled up or not</string>
    <string name="daily_log">Daily Log</string>
    <string name="bmi">BMI</string>
    <string name="add_amount">Add amount: </string>
    <string name="refresh">Refresh</string>
    <string name="rem_fav">Remove favorite</string>
    <string name="no_log_to_display">No log to display</string>
    <string name="no_entries_to_display">No entries to display</string>
    <string name="image_that_shows_if_the_tab_shown_or_not">Image that shows if the tab shown or not</string>
    <string name="activity_and_season">Activity And Season</string>
    <string name="level_of_activity">Level of activity:</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="bmi_log">BMI Log</string>
    <string name="current_bmi">Current BMI</string>
    <string name="your_bmi_level">Your BMI level:</string>
    <string name="status_fat_test">Status:</string>
    <string name="recommended_amount_of_water_to_drink">Recommended amount of water to drink:</string>
    <string name="_3000_ml">3000 ml</string>
    <string name="click_to_enter_your_birthday">Click to enter your birthday</string>
    <string name="input">Input</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="gender">Gender:</string>
    <string name="bmi_activity_level_drop">bmi activity level drop</string>
    <string name="season">Season:</string>
    <string name="bmi_chart_edit_drop">bmi chart edit drop</string>
    <string name="bmi_log_edit_drop">bmi log edit drop</string>
    <string name="day">Day</string>
    <string name="progress">Progress:</string>
    <string name="goal">Goal:</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="achievement">Achievement</string>
    <string name="drop_down_goal_achievement">Drop down goal achievement</string>
    <string name="enter_height">Enter height</string>
    <string name="_3000">3000</string>
    <string name="info">Information</string>
    <string name="no_bmi_log">No BMI log</string>
    <string name="_2000">2000</string>
    <string name="recommended_n_amount">Recommended   amount:</string>
    <string name="_40000">40000</string>
    <string name="no_achievement">No achievement</string>
    <string name="this_is_the_user_defined_daily_goal">This is the user defined daily goal</string>
    <string name="user_defined_goal_for_the_week">User defined goal for the week.</string>
    <string name="this_is_the_user_defined_month_goal">This is the user defined month goal</string>
    <string name="reached_monthly_goal_test">Reached Monthly goal</string>
    <string name="month_of_december_2017_test">Month of: December 2017</string>
    <string name="icon_of_the_achievement">icon of the achievement</string>
    <string name="bmi_semicolon">BMI:</string>
    <string name="bmi_test">31.2</string>
    <string name="notification_on_off">Notification (on/off)</string>
    <string name="notification">Notification</string>
    <string name="allow_drinking_reminders">Allow Drinking reminders</string>
    <string name="allow_bmi_record_notification">Allow BMI record notification</string>
    <string name="allow_achievement_notification">Allow Achievement notification</string>
    <string name="drinking_reminder_min_time_interval">Drinking reminder min time interval:</string>
    <string name="time_interval_test">1H 30M</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="reset_colors">Reset Colors</string>
    <string name="color_primary_dark">Color Primary Dark</string>
    <string name="color_primary">Color Primary</string>
    <string name="accent_color">Accent Color</string>
    <string name="select_color">Select Color</string>
    <string name="color_theme">Color / Theme</string>
    <string name="interval_picker">Interval Picker</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="semicolon">:</string>
    <string name="save">Save</string>
    <string name="arrow_to_display_the_edit_option">Arrow to display the edit option</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activity_level">
        <item>Low</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Intense</item>
    </string-array>

    <string-array name="seasons">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
    </string-array>

    <string-array name="achievementType">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string-array name="statisticsType">
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
