<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracker"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/water_tracker" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drinking_statistics" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drinking_timer" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/goals" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/bmi" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/info" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
